Broken FCurve rendering #110169

Closed
opened 2023-07-16 14:06:35 +02:00 by sanek122005 · 8 comments

System Information
System: Ubuntu 20.04
VideoCard: Geforce MX230

Blender Version
Broken: 3.5, 3.6, 4.0

Short description of error
In one of my animation files, I can observe a broken display of animation curves:

  1. when the Normalize option is enabled, one of the curves moves across the screen
  2. the curves have extremely low resolution
    Screenshot_20230716_145338.png
    This error is present in the curves of only one bone - hand_IK_control.R. For the rest of the bones, the curves display works as expected
    Screenshot_20230716_145447.png
    The error does not disappear when you restart the blender, PC, reset settings

Exact steps for others to reproduce the error

  1. Open file
  2. Select hand_IK_control.R
  3. See graph Editor
  4. Select any other bone
  5. See graph editor
**System Information** System: Ubuntu 20.04 VideoCard: Geforce MX230 **Blender Version** Broken: 3.5, 3.6, 4.0 **Short description of error** In one of my animation files, I can observe a broken display of animation curves: 1) when the Normalize option is enabled, one of the curves moves across the screen 2) the curves have extremely low resolution ![Screenshot_20230716_145338.png](/attachments/3c9bb0fd-f5ba-4a08-84b6-48cdc7c06c92) This error is present in the curves of only one bone - hand_IK_control.R. For the rest of the bones, the curves display works as expected ![Screenshot_20230716_145447.png](/attachments/e23d54c7-588a-4267-a741-c517fd565124) The error does not disappear when you restart the blender, PC, reset settings **Exact steps for others to reproduce the error** 1. Open file 2. Select hand_IK_control.R 3. See graph Editor 4. Select any other bone 5. See graph editor
sanek122005 added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-16 14:06:36 +02:00
Member

Hi! It looks consistent to me. if you move other bone's key frame that close (1 frame interval in the case of hand_IK_control.R), they will show up segmented like that. It's already sub-frame scale, and blender is drawing 6 segments per frame on the f-curve, it's probably good enough as a representation.

图片

Hi! It looks consistent to me. if you move other bone's key frame that close (1 frame interval in the case of `hand_IK_control.R`), they will show up segmented like that. It's already sub-frame scale, and blender is drawing 6 segments per frame on the f-curve, it's probably good enough as a representation. ![图片](/attachments/5b397600-8659-4722-b416-2f9a46ca523c)
Member

I believe the curve resolution issue (point 2 in the issue description above) will be addressed by #110301. In addition to improving performance, that PR also switches to computing curve resolution based on its on-screen size, so it should scale up better when zooming in. (There will still be limits, of course, but this particular case should be addressed well.)

I don't understand what issue point 1 is describing, however.

I believe the curve resolution issue (point 2 in the issue description above) will be addressed by #110301. In addition to improving performance, that PR also switches to computing curve resolution based on its on-screen size, so it should scale up better when zooming in. (There will still be limits, of course, but this particular case should be addressed well.) I don't understand what issue point 1 is describing, however.
Author

I don't understand what issue point 1 is describing, however.

> I don't understand what issue point 1 is describing, however. <video src="/attachments/ca3fdbb5-4cf8-40a6-86d7-2f74ca73f346" title="2023-08-03 10-58-51.mp4" controls></video>
Member

Got it! Indeed, that appears to be a bug. Thank you for the report and the video!

Got it! Indeed, that appears to be a bug. Thank you for the report and the video!
Member

Indeed, #110301 resolves point 2 (curve drawing resolution). Before/after:

curve_resolution_before_after.png

However, it does not resolve point 1, which is a separate issue.

Indeed, #110301 resolves point 2 (curve drawing resolution). Before/after: ![curve_resolution_before_after.png](/attachments/033925a7-cb55-40bc-8f44-33c444000368) However, it does not resolve point 1, which is a separate issue.
Nathan Vegdahl self-assigned this 2023-08-03 10:56:45 +02:00
Member

Point 1 appears to be a floating point precision issue. That particular curve is almost completely flat, but is off just enough for normalizing to try to expand it. However, due to how tiny the deviation from flatness is, the transform to expand it vertically ends up having precision issues.

I'll investigate a fix. The simplest fix would just be to bump up the size of the epsilon value used to determine when to expand a curve during normalization. But it's possible there may be a way to rearrange the floating point operations instead, so that they at least result in a consistent mapping.

Point 1 appears to be a floating point precision issue. That particular curve is *almost* completely flat, but is off just enough for normalizing to try to expand it. However, due to how tiny the deviation from flatness is, the transform to expand it vertically ends up having precision issues. I'll investigate a fix. The simplest fix would just be to bump up the size of the epsilon value used to determine when to expand a curve during normalization. But it's possible there may be a way to rearrange the floating point operations instead, so that they at least result in a consistent mapping.
Member

@nathanvegdahl will #110301 generate some jitter when key frames are squeezed together visually and when you zoom, it will lose details especially around extreme positions?

@nathanvegdahl will #110301 generate some jitter when key frames are squeezed together visually and when you zoom, it will lose details especially around extreme positions?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-07 10:53:12 +02:00
Member

@ChengduLittleA

will #110301 generate some jitter when key frames are squeezed together visually and when you zoom, it will lose details especially around extreme positions?

I don't believe it will cause any noticeable visual issues. And the testing I've done of it so far seems to confirm that.

Also, I just landed a fix for point 1 in #110796. So I believe in combination with #110301, that closes out this issue. But @sanek122005 definitely let us know if any issues persist.

@ChengduLittleA > will #110301 generate some jitter when key frames are squeezed together visually and when you zoom, it will lose details especially around extreme positions? I don't believe it will cause any noticeable visual issues. And the testing I've done of it so far seems to confirm that. Also, I just landed a fix for point 1 in #110796. So I believe in combination with #110301, that closes out this issue. But @sanek122005 definitely let us know if any issues persist.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110169
No description provided.